# AiFramework

./: .clang-format  .gitignore  AiFramework.sln  AiFramework.vcxproj  AiFramework.vcxproj.filters  CMakeLists.txt  Makefile  README.md  gcc_update_rpi.sh
AiFramework/: AiFramework.vcxproj  AiFramework.vcxproj.filters  Makefile  build.sh  framework_main.cpp
AiFramework/include/: ai_framework.hpp  framework_build.hpp  framework_main.hpp
AiFramework/include/components/: base_component.hpp  button.hpp  rectangle_component.hpp
AiFramework/include/framework/: app_window.hpp  base_app.hpp  error_manager.hpp  i_app_window.hpp  shaders_internal.hpp
AiFramework/include/generic/: signal_source.hpp  singleton.hpp  vector2.hpp
AiFramework/include/graphics/: color.hpp  gl_renderer.hpp  graphics_api.hpp  i_graphics_api.hpp  image.hpp  quad_vertex_buffer.hpp  renderer.hpp  shader.hpp  shader_program.hpp  texture.hpp  vertex.hpp  vertex_buffer.hpp
AiFramework/include/input/: input_manager.h  input_manager.hpp
AiFramework/include/platform/: platform.hpp
AiFramework/include/platform/gl/: open_gl_api.hpp
AiFramework/include/platform/win32/: wglext.hpp
AiFramework/shader/: 2DTexture.fs  2DTexture.vs  ColorVertex2D.vs  TexturedVertex2D.fs  TexturedVertex2D.vs  Vertex2D.vs
AiFramework/src/: framework_main.cpp
AiFramework/src/components/: button.cpp  rectangle_component.cpp
AiFramework/src/framework/: base_app.cpp
AiFramework/src/framework/linux/: app_window_impl_x11.cpp
AiFramework/src/framework/win32/: app_window_impl_win32.cpp
AiFramework/src/generic/: logger.cpp  signal_source.cpp
AiFramework/src/graphics/: image.cpp  shader.cpp  shader_program.cpp  vertex.cpp  vertex_buffer.cpp
AiFramework/src/graphics/gl/: gl_renderer.cpp  quad_vertex_buffer_impl_gl.cpp  renderer_impl_gl.cpp  shader_impl_gl.cpp  shader_program_impl_gl.cpp  texture_impl_gl.cpp  vertex_buffer_impl_gl.cpp  vertex_impl_gl.cpp
AiFramework/src/platform/: platform.cpp
AiFramework/src/platform/gl/: gl_renderer.cpp
AiFrameworkTestApp/: AiFrameworkTestApp.vcxproj  AiFrameworkTestApp.vcxproj.filters  Makefile  app.cpp  app.hpp
cmake/config/: glmConfig.cmake
include/: framework_build.hpp  shader_src.hpp
include/components/: button.hpp
include/generic/: logger.hpp  signal_source.hpp
include/graphics/: enums.hpp  i_graphics_api.hpp  i_renderer.hpp  quad_vertex_buffer.hpp  shader.hpp  shader_program.hpp  texture.hpp  vertex.hpp  vertex_buffer.hpp
include/input/: input_manager.hpp
include/platform/dummy/: dummy_app_window.hpp  dummy_renderer.hpp
include/platform/gl/: open_gl_api.hpp
include/platform/linux/: egl_renderer.hpp
include/platform/linux/x11/: glx_app_window.hpp  glx_renderer.hpp
src/: framework_main.cpp
src/components/: rectangle_component.cpp
src/framework/: base_app.cpp
src/generic/: logger.cpp  signal_source.cpp
src/graphics/: image.cpp  quad_vertex_buffer.cpp  shader.cpp  shader_program.cpp  texture.cpp  vertex.cpp  vertex_buffer.cpp
src/platform/: platform.cpp
src/platform/gl/: gl_renderer.cpp  open_gl_api.cpp
src/platform/linux/: egl_renderer.cpp
templates/: framework_config.hpp.in
(+11 files in other folders)
